// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib > setPkgJson casae 0 1`] = `
{
  "packageManager": "pnpm@9.12.1",
  "scripts": {
    "check": "repo check",
    "clean:repo": "repo clean",
    "commitlint": "commitlint --edit",
    "doctor": "repo doctor",
    "mirror": "repo mirror",
    "new": "repo new",
    "script:clean": "repo clean",
    "script:init": "repo init",
    "script:mirror": "repo mirror",
    "script:sync": "repo sync",
    "setup": "repo setup",
    "sync": "repo sync",
  },
}
`;

exports[`lib > setPkgJson casae 1 1`] = `
{
  "scripts": {
    "build": "turbo run build",
    "check": "repo check",
    "clean:repo": "repo clean",
    "commit": "commit",
    "commitlint": "commitlint --edit",
    "dev": "turbo run dev --parallel",
    "doctor": "repo doctor",
    "lint": "turbo run lint",
    "mirror": "repo mirror",
    "new": "repo new",
    "preinstall": "npx only-allow pnpm",
    "prepare": "husky",
    "publish-packages": "turbo run build lint test && changeset version && changeset publish",
    "release": "changeset",
    "script:clean": "repo clean",
    "script:init": "repo init",
    "script:mirror": "repo mirror",
    "script:sync": "repo sync",
    "setup": "repo setup",
    "sync": "repo sync",
    "test": "vitest run --coverage.enabled",
    "test:dev": "vitest",
  },
}
`;

exports[`lib > setPkgJson casae 2 1`] = `
{
  "dependencies": {
    "xx": "workspace:*",
  },
  "devDependencies": {
    "x": "workspace:*",
  },
  "scripts": {
    "check": "repo check",
    "clean:repo": "repo clean",
    "commitlint": "commitlint --edit",
    "doctor": "repo doctor",
    "mirror": "repo mirror",
    "new": "repo new",
    "script:clean": "repo clean",
    "script:init": "repo init",
    "script:mirror": "repo mirror",
    "script:sync": "repo sync",
    "setup": "repo setup",
    "sync": "repo sync",
  },
}
`;

exports[`lib > setPkgJson casae 3 1`] = `
{
  "dependencies": {
    "xx": "2.2.2",
  },
  "devDependencies": {
    "x": "1.1.1",
  },
  "scripts": {
    "check": "repo check",
    "clean:repo": "repo clean",
    "commitlint": "commitlint --edit",
    "doctor": "repo doctor",
    "mirror": "repo mirror",
    "new": "repo new",
    "script:clean": "repo clean",
    "script:init": "repo init",
    "script:mirror": "repo mirror",
    "script:sync": "repo sync",
    "setup": "repo setup",
    "sync": "repo sync",
  },
}
`;
